<resources>
    <string name="app_name">RainbowMail</string>
    <string name="drawerOpen">OPEN DRAWER</string>
    <string name="drawerClose">CLOSE DRAWER</string>
    <string name="cancle">취소</string>
    <string name="send">전송</string>
    <string name="ok">확인</string>
    <string name="write">메일쓰기</string>
    <string name="sender">보낸사람</string>
    <string name="receiver">받는사람</string>
    <string name="sendHint">이메일을 입력하세요</string>
    <string name="subjectHint">제목을 입력하세요</string>
    <string name="subject">제목</string>
    <string name="content">내용</string>
    <string name="date">날짜</string>
    <string name="defaultEmail">ceshin0028@gmail.com</string>
    <string name="defaultDate">2022–11–08</string>
    <string name="defaultDate2">2022년 11월 8일</string>
    <string name="defaultName">CHAEEUN SHIN</string>
    <string name="close">닫기</string>
    <string name="received">받은메일함</string>
    <string name="sent">보낸메일함</string>
    <string name="spam">스팸메일함</string>
</resources>