<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddressFrom1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/sender"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAddressFrom2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddressTo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/receiver"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtAddressTo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:ems="14"
            android:hint="@string/sendHint"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSubject"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/subject"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSubject"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:ems="16"
            android:hint="@string/subjectHint"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/content"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:ems="16"
            android:gravity="top"
            android:maxLines="10"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancle"
            style="@style/btnCancle"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_button" />

        <Button
            android:id="@+id/btnSend"
            style="@style/btnSend"
            android:background="@drawable/round_button" />
    </LinearLayout>
</LinearLayout>