<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/matchWrap"
    android:gravity="center_vertical"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/profile_image0"/>

    <LinearLayout
        style="@style/matchWrap"
        android:layout_toEndOf="@id/ivImage"
        android:orientation="vertical">

        <LinearLayout
            style="@style/matchWrap"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAddressFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/defaultEmail"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/defaultDate"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSubject"
            style="@style/matchWrap"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/subject"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvContent"
            style="@style/matchWrap"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
